Fix alignment of BrowserDownload components in desktop size

--- a/src/components/BrowserDownload/BrowserDownload.css
+++ b/src/components/BrowserDownload/BrowserDownload.css
@@ -2,14 +2,15 @@
   text-align: center;
   box-shadow: 0px 0px 25px 7px rgba(222, 218, 218, 0.83);
   padding: 20px;
-  margin: 20px 0;
-  border-radius: 20px;
-  max-width: 360px;
+  margin: 20px;
+  border-radius: 10px;
+  max-width: 300px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 340px;
+  line-height: 2;
 }
 
 .Download--logo {
@@ -28,5 +29,5 @@
 }
 
 .Download--divider {
-  margin: 15px 0;
+  margin: 25px 0;
 }
