--- a/src/components/Downloads/Downloads.css
+++ b/src/components/Downloads/Downloads.css
@@ -1,5 +1,5 @@
 :root {
-  --container-margin: 30px;
+  --container-margin: 20px;
 }
 
 .Downloads--outer-container {
@@ -33,7 +33,8 @@
 @media screen and (min-width: 1100px) {
   .Downloads--container {
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: normal;
   }
 
   #Download--container-1 {
